--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "firebase": "^9.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuetify": "^2.6.0"
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.11",
