--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint:fix": "eslint src --fix"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@vue/composition-api": "^1.6.3",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "firebase": "^9.8.3",
+    "install": "^0.13.0",
+    "npm": "^8.13.2",
+    "pinia": "^2.0.14",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.7"
