--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "install": "^0.13.0",
     "npm": "^8.13.2",
     "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.6.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.7"
