--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pinia-plugin-persistedstate": "^1.6.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuelidate": "^0.7.7"
+    "vuelidate": "^0.7.7",
+    "vuetify": "^2.6.7"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.11",
